# latte-dock-ng

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALLATION.md  PORTING_PLASMA6_WAYLAND.md  README.md  default.nix  install.sh  uninstall.sh
.github/workflows/: build.yml  release.yml
app/: CMakeLists.txt  FakeTarget.cmake  alternativeshelper.cpp  alternativeshelper.h  apptypes.h  config-latte.h.cmake  infoview.cpp  infoview.h  knscompat.cpp  knscompat.h  lattecorona.cpp  lattecorona.h  lattedock.notifyrc  launcherhelper.cpp  main.cpp  org.kde.latte-dock.appdata.xml.cmake  org.kde.latte-dock.desktop.cmake  org.kde.latte-dock.kickeractions.desktop.cmake  pluginids.h  primaryoutputwatcher.cpp  primaryoutputwatcher.h  screenpool.cpp
app/data/: activitydata.cpp  activitydata.h  appletdata.h  layoutdata.cpp  layoutdata.h  preferencesdata.cpp  preferencesdata.h  viewdata.cpp  viewstable.cpp
app/declarativeimports/: contextmenulayerquickitem.cpp  contextmenulayerquickitem.h  interfaces.cpp  interfaces.h
app/indicator/: factory.cpp
app/layout/: abstractlayout.cpp  abstractlayout.h  centrallayout.cpp  centrallayout.h  genericlayout.cpp  genericlayout.h
app/layouts/: importer.cpp  manager.cpp  manager.h  storage.cpp  synchronizer.cpp  synchronizer.h
app/package/: lattepackage.cpp  lattepackage.h
app/packageplugins/indicator/: CMakeLists.txt  indicatorpackage.cpp
app/session/: shutdownstate.h
app/settings/: universalsettings.cpp  universalsettings.h
app/shortcuts/: globalshortcuts.cpp  modifiertracker.cpp
app/templates/: templatesmanager.cpp
app/tools/: commontools.cpp  commontools.h
app/view/: clonedview.cpp  clonedview.h  containmentinterface.cpp  containmentinterface.h  effects.cpp  effects.h  eventssink.cpp  eventssink.h  originalview.cpp  originalview.h  panelshadows.cpp  panelshadows_p.h  parabolic.cpp  parabolic.h  positioner.cpp  positioner.h  view.cpp  view.h  viewgeometryhelpers.h  visibilitymanager.cpp  visibilitymanager.h
app/wm/: CMakeLists.txt  abstractwindowinterface.cpp  abstractwindowinterface.h  tasktools.cpp  tasktools.h  (+4 more)
autotests/: CMakeLists.txt  containmentlayoutunittest.cpp  coreunittest.cpp  coverageestimate.py  dataunittest.cpp  declarativecoreunittest.cpp  effectslogictest.cpp  importerlogictest.cpp  indicatorunittest.cpp  layoutunittest.cpp  modelunittest.cpp  packagingcontracttest.cpp  parabolicmathtest.cpp  parabolicstatetest.cpp  plasmaextendedunittest.cpp  positionergeometrytest.cpp  qmlsmoketest.cpp  sourcecontracttest.cpp  storagelogictest.cpp  synchronizerlogictest.cpp  toolsunittest.cpp  typesunittest.cpp  visibilitylogictest.cpp  wmunittest.cpp
compat/qml/: CMakeLists.txt
compat/qml/org/kde/latte/compat/taskmanager/: qmldir
compat/qml/org/kde/plasma/private/taskmanager/: Backend.qml  SmartLauncherItem.qml  qmldir
containment/: CMakeLists.txt
declarativeimports/: CMakeLists.txt
declarativeimports/abilities/bridge/: Launchers.qml  ParabolicEffect.qml  PositionShortcuts.qml
declarativeimports/abilities/client/: MyView.qml  ParabolicEffect.qml
declarativeimports/abilities/client/appletabilities/: ContainerAnchorBindings.qml  ContainerGridBindings.qml
declarativeimports/abilities/client/indicators/: LatteIndicator.qml
declarativeimports/abilities/definition/: Containment.qml  MyView.qml  ParabolicEffect.qml
declarativeimports/abilities/host/: Containment.qml  MyView.qml
declarativeimports/abilities/items/: BasicItem.qml  IndicatorObject.qml
declarativeimports/abilities/items/basicitem/: HiddenSpacer.qml  IndicatorLevel.qml  ParabolicEventsArea.qml  ParabolicItem.qml  SeparatorItem.qml  ShortcutBadge.qml  TitleTooltipParent.qml
declarativeimports/components/: AddItem.qml  AddingArea.qml  BadgeText.qml  Button.qml  CheckBox.qml  ComboBox.qml  ComboBoxButton.qml  ExternalShadow.qml  GlowPoint.qml  Header.qml  HeaderSwitch.qml  ItemDelegate.qml  Label.qml  Slider.qml  SpinBox.qml  SubHeader.qml  Switch.qml  TextField.qml  ToolTip.qml  qmldir
declarativeimports/components/private/: ButtonShadow.qml  DefaultListItemBackground.qml  RoundShadow.qml  TextFieldFocus.qml
declarativeimports/core/: CMakeLists.txt  config-latte-lib.h.cmake  dialog.cpp  environment.cpp  environment.h  iconitem.cpp  iconitem.h  lattecoreplugin.cpp  quickwindowsystem.cpp  quickwindowsystem.h
docker/: Dockerfile.arch  Dockerfile.debian  Dockerfile.fedora  Dockerfile.mageia  Dockerfile.nixos  Dockerfile.opensuse  Dockerfile.ubuntu  docker-compose.yml  package-arch.sh  verify-install.sh  verify-nix-nixos.sh
docs/: development-testing-guide.md  preview-performance-investigation.md  release-version-alignment-design.md
indicators/: CMakeLists.txt
plasmoid/: CMakeLists.txt
plasmoid/package/: metadata.json
plasmoid/package/contents/code/: tools.js
plasmoid/package/contents/config/: main.xml
plasmoid/package/contents/ui/: AppletAbilities.qml  ContextMenu.qml  PulseAudio.qml  TasksExtendedManager.qml  main.qml
plasmoid/package/contents/ui/abilities/: Launchers.qml
plasmoid/package/contents/ui/abilities/launchers/: Syncer.qml
plasmoid/package/contents/ui/config/: ConfigAppearance.qml  ConfigInteraction.qml  ConfigPanel.qml
plasmoid/package/contents/ui/previews/: PipeWireThumbnail.5.26.qml  PipeWireWarmup.qml  ScreenshotThumbnail.qml  ToolTipDelegate2.qml  ToolTipInstance.qml  ToolTipWindowMouseArea.qml
plasmoid/package/contents/ui/task/: AudioStream.qml  ProgressOverlay.qml  SubWindows.qml  TaskIcon.qml  TaskItem.qml  TaskMouseArea.qml
plasmoid/package/contents/ui/task/animations/: LauncherAnimation.qml  NewWindowAnimation.qml  RealRemovalAnimation.qml  RemoveWindowFromGroupAnimation.qml
plasmoid/package/contents/ui/taskslayout/: MouseHandler.qml  ScrollEdgeShadows.qml  ScrollOpacityMask.qml  ScrollPositioner.qml  ScrollableList.qml
plasmoid/plugin/: contextmenuactionsbackend.cpp  contextmenuactionsbackend.h  lattetasksplugin.cpp  pipecaptureworker.cpp  pipecaptureworker.h  windowscreenshotprovider.cpp  windowscreenshotprovider.h
scripts/: dev-debug.sh
separator/: CMakeLists.txt
tools/: latte-pw-capture.c
(+213 files in other folders)
